# fastapi-heroku

./: Dockerfile  main.py  pyproject.toml  requirements.txt  supermarket.ipynb
.ipynb_checkpoints/: supermarket-checkpoint.ipynb
